# tday

./: .gitignore  CHANGELOG.md  CoWorkers.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/scripts/: create-issues-p0p1-round2.js  create-issues.js  create-perf-issues.js
.github/workflows/: create-bug-issues-p0p1.yml  create-bug-issues.yml  create-perf-issues.yml  pages.yml  release.yml  translate-issues-to-english.yml
apps/desktop/: electron-builder.yml  electron.vite.config.ts  gateway-test-anthropic.mjs  gateway-test-cjs.cjs  gateway-test.mjs  package.json  tailwind.config.cjs  test-inject.mjs  tsconfig.json  vitest.config.ts
apps/desktop/resources/: pi-computer-use-bridge.ts
apps/desktop/resources/CoWorkers/: backend-engineer-AGENT.md  code-reviewer-AGENT.md  computer-use-operator-AGENT.md  data-engineer-AGENT.md  devops-engineer-AGENT.md  frontend-engineer-AGENT.md  security-auditor-AGENT.md  tech-lead-AGENT.md  test-engineer-AGENT.md
apps/desktop/src/main/: agent-utils.ts  computer-use.ts  config.ts  coworker.ts  cron.ts  fd-install.ts  index.ts  index.ts.bak  nativecore-service.ts  npm-installer.ts  path-utils.ts  power-manager.ts  provider-utils.ts  pty-manager.ts  settings-store.ts  tab-history.ts  window.ts
apps/desktop/src/main/__tests__/: agent-utils.test.ts  computer-use.test.ts  cron.test.ts  nativecore-service.test.ts  path-utils.test.ts  provider-utils.test.ts
apps/desktop/src/main/agent-history/: index.ts  scanners.ts  store.ts
apps/desktop/src/main/agent-history/__tests__/: agent-history.test.ts
apps/desktop/src/main/discovery/: index.ts  probe.ts  specs.ts  types.ts
apps/desktop/src/main/discovery/__tests__/: discovery.test.ts  probe.test.ts
apps/desktop/src/main/gateway/: adapter.ts  claude-local-adapter.ts  index.ts  types.ts
apps/desktop/src/main/gateway.bak/: index.ts
apps/desktop/src/main/gateway/__tests__/: adapter.integration.test.ts  input.test.ts  response.test.ts  sseparser.test.ts  state.test.ts  stream.test.ts  thinking.test.ts  tools.test.ts
apps/desktop/src/main/gateway/anthropic/: client.ts  types.ts
apps/desktop/src/main/gateway/bridge/: input.ts  response.ts  stream.ts  tools.ts
apps/desktop/src/main/gateway/openai/: types.ts
apps/desktop/src/main/usage/: otel-receiver.ts  pricing.ts  pty-parsers.ts  session-cache.ts  store.ts  types.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: AgentHistoryPanel.tsx  App.tsx  HistoryPanel.tsx  Logo.tsx  ProviderLogo.tsx  Settings.tsx  Terminal.tsx  styles.css
crates/tday-core/: Cargo.toml
crates/tday-core/src/: main.rs
crates/tday-devtools/: ARCHITECTURE.md  Cargo.toml
crates/tday-devtools/src/: error.rs  find_image.rs  lib.rs  main.rs  server.rs
crates/tday-devtools/src/android/: device.rs  input.rs  mod.rs  navigation.rs  screenshot.rs  ui_automator.rs
crates/tday-devtools/src/app_protocol/: client.rs  messages.rs  mod.rs
crates/tday-devtools/src/cdp/: dom_discovery.rs  mod.rs
crates/tday-devtools/src/cdp/tools/: element_at_point.rs  input.rs  mod.rs  pages.rs  script.rs
crates/tday-devtools/src/handlers/: android.rs  app_protocol.rs  ax.rs  cdp.rs  input.rs  mod.rs  navigation.rs  probe_app.rs  screenshot.rs  system.rs  tracking.rs
crates/tday-devtools/src/platform/: mod.rs  types.rs
crates/tday-devtools/src/platform/macos/: app.rs  ax.rs  display.rs  input.rs  mod.rs  ocr.rs  screenshot.rs  window.rs
crates/tday-devtools/src/session/: ax_session.rs  image_cache.rs  mod.rs  screenshot_cache.rs
crates/tday-devtools/src/tracking/: hover_tracker.rs  mod.rs  screen_recorder.rs
crates/tday-nativecore/: Cargo.toml
crates/tday-nativecore/src/: find_image.rs  main.rs  parent_watch.rs  server.rs  singleton.rs
crates/tday-nativecore/src/android/: device.rs  input.rs  navigation.rs
crates/tday-nativecore/src/handlers/: ax.rs  input.rs  probe_app.rs  screenshot.rs  system.rs
crates/tday-nativecore/src/platform/: mod.rs
crates/tday-nativecore/src/platform/linux/: app.rs  atspi.rs  display.rs  input.rs  mod.rs  ocr.rs  screenshot.rs  window.rs
crates/tday-nativecore/src/platform/macos/: ax.rs  mod.rs
crates/tday-nativecore/src/platform/windows/: app.rs  display.rs  input.rs  mod.rs  ocr.rs  screenshot.rs  uia.rs  window.rs
crates/tday-nativecore/src/session/: ax_session.rs  image_cache.rs  screenshot_cache.rs
crates/tday-nativecore/src/tracking/: hover_tracker.rs  screen_recorder.rs
crates/tday-nativecore/tests/: http_server_test.rs
docs/: index.html
scripts/: build-icon.mjs  release.mjs  verify-local-gateway.mjs
(+35 files in other folders)
